--- a/public/assets/styles/ideas-list.css
+++ b/public/assets/styles/ideas-list.css
@@ -6,18 +6,22 @@
 #ideas-list > li {
   position: relative;
   padding-left: 90px;
-  margin-bottom: 20px;
 }
 
-#ideas-list h3:first-child {
-  margin-top: -5px;
+#ideas-list > li + li {
+  border-top: 2px dotted #777;
+  margin-top: 20px;
+  padding-top: 20px;
+}
+
+#ideas-list h3 + p {
+  margin-top: 5px;
 }
 
 .idea-author {
   position: absolute;
   color: #666;
-  width: 75px;
-  top: 0px;
+  width: 80px;
   left: 0px;
   text-align: center;
   font-size: 9pt;
@@ -31,7 +35,7 @@
 }
 
 .idea-content {
-  background-color: #F2F0EA;
+  background-color: #D0E0F5;
   padding: 10px 15px;
   border-radius: 10px;
 }
