--- a/public/assets/styles/ideas-list.css
+++ b/public/assets/styles/ideas-list.css
@@ -1,45 +1,10 @@
 
-#ideas-list {
-  list-style: none;
-}
-
-#ideas-list > li {
-  position: relative;
-  padding-left: 90px;
-}
-
-#ideas-list > li + li {
-  border-top: 2px dotted #777;
-  margin-top: 20px;
-  padding-top: 20px;
-}
-
-#ideas-list h3 + p {
-  margin-top: 5px;
-}
-
-.idea-author {
-  position: absolute;
-  color: #666;
-  width: 80px;
-  left: 0px;
-  text-align: center;
-  font-size: 9pt;
-}
-
-.idea-author img {
-  display: block;
-  max-width: 50px;
-  margin: auto;
-  border-radius: 25px;
-}
-
-.idea-content {
-  background-color: #D0E0F5;
-  padding: 10px 15px;
+#ideas-list .entry-content {
+  cursor: pointer;
+  background: #D0E0F5 no-repeat 99% 5px;
   border-radius: 10px;
 }
 
-.idea-content p {
-  white-space: pre-line;
+#ideas-list .entry-content:hover {
+  background-image: url('../images/right-arrow.png');
 }
