Comments now open in a modal window.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@9 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/assets/styles/base.css
+++ b/public/assets/styles/base.css
@@ -9,7 +9,8 @@
 
 body {
   font: 10pt Segoe UI, sans-serif;
-  background: url('../images/background.jpg')
+  background: url('../images/background.jpg');
+  margin: 40px;
 }
 
 input,
