Comment form is now visually a part of the comment list.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@11 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/assets/styles/comments.css
+++ b/public/assets/styles/comments.css
@@ -5,6 +5,14 @@
   width: 49%;
 }
 
+#comment-list > li:first-child {
+  padding-left: 0px;
+}
+
+#comment-list textarea {
+  height: 100px;
+}
+
 #comment-list .entry-content {
   white-space: pre-line;
 }
