--- a/public/assets/styles/comments.css
+++ b/public/assets/styles/comments.css
@@ -4,14 +4,14 @@
   width: 49%;
 }
 
-#comment-list > li:first-child {
-  padding-left: 0px;
+#comment-list > li:nth-child(2) {
+  padding-left: 20px;
 }
 
 #comment-list textarea {
   height: 100px;
 }
 
-#comment-list .entry-content {
+#comment-list .entry-content p {
   white-space: pre-line;
 }
