Added responsive design.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@16 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/assets/styles/comments.css
+++ b/public/assets/styles/comments.css
@@ -15,3 +15,9 @@
 #comment-list .entry-content p {
   white-space: pre-line;
 }
+
+@media (max-width: 800px) {
+  #comment-list > li {
+    width: 99%;
+  }
+}
