--- a/public/assets/plugins/modals/modals.css
+++ b/public/assets/plugins/modals/modals.css
@@ -5,7 +5,7 @@
   background: white;
   border: 1px solid #CCC;
   border-radius: 5px;
-  width: 800px;
+  max-width: 800px;
   z-index: 2;
   transition-property: top, left;
   transition-duration: 0.33s;
