--- a/public/assets/styles/entry-list.css
+++ b/public/assets/styles/entry-list.css
@@ -32,7 +32,7 @@
 
 .entry-content {
   padding: 10px 15px;
-  background-color: #D0E0F5;
+  background-color: #DADAD5;
   border-radius: 10px;
 }
 
