Added comment count to ideas.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@19 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/assets/styles/ideas-list.css
+++ b/public/assets/styles/ideas-list.css
@@ -15,6 +15,22 @@
   background-image: url('../images/right-arrow.png');
 }
 
+.entry-data {
+  list-style: none;
+  margin-top: 10px;
+  padding-top: 5px;
+  border-top: 1px dotted #555;
+}
+
+.entry-data li {
+  background: no-repeat left;
+  padding-left: 30px;
+}
+
+.entry-data li.comments {
+  background-image: url('../images/comments.png');
+}
+
 @media (max-width: 800px) {
   #ideas-list > li {
     width: 99%;
