The arrow that appears while hovering an idea doesn't make sense anymore as the ideas now open in a modal, rather than on the right.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@21 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/assets/styles/ideas-list.css
+++ b/public/assets/styles/ideas-list.css
@@ -6,13 +6,11 @@
 
 #ideas-list .entry-content {
   cursor: pointer;
-  background-position: 99% 5px;
-  background-repeat: no-repeat;
   border-radius: 10px;
 }
 
 #ideas-list .entry-content:hover {
-  background-image: url('../images/right-arrow.png');
+  background-color: #E4E4E2;
 }
 
 .entry-data {
