--- a/public/assets/styles/entry-list.css
+++ b/public/assets/styles/entry-list.css
@@ -52,3 +52,7 @@
   background-color: #8FD72D;
   background-image: linear-gradient(#8FD72D, #6E9F2B);
 }
+
+#ideas-list .finished .entry-content:hover {
+  background: #8FD72D;
+}
