--- a/public/assets/styles/ideas-list.css
+++ b/public/assets/styles/ideas-list.css
@@ -46,3 +46,20 @@
     width: 24%;
   }
 }
+
+
+/** Finished ideas */
+.finished .entry-content {
+  background-color: #8FD72D;
+  background-image: linear-gradient(#8FD72D, #6E9F2B);
+}
+
+.finished .entry-content h3 {
+  display: inline;
+  background: url('../images/mark-sign.png') no-repeat right;
+  padding-right: 40px;
+}
+
+#ideas-list .finished .entry-content:hover {
+  background: #8FD72D;
+}
