--- a/public/assets/styles/entry-list.css
+++ b/public/assets/styles/entry-list.css
@@ -31,7 +31,7 @@
 
 .entry-content {
   padding: 10px 15px;
-  background-color: #DADAD5;
+  background-color: #E4E4E2;
   border-radius: 10px;
 }
 
