--- a/public/assets/styles/headings.css
+++ b/public/assets/styles/headings.css
@@ -1,7 +1,7 @@
 
 h2,
 h3 {
-  font-family: Segoe UI Light, Arial, sans-serif;
+  font-family: Open Sans, Arial, sans-serif;
   font-weight: normal;
 }
 
