--- a/public/assets/styles/ideas-list.css
+++ b/public/assets/styles/ideas-list.css
@@ -37,12 +37,6 @@
   border-radius: 10px;
 }
 
-#ideas-list .vote {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-}
-
 .entry-data {
   list-style: none;
   margin-top: 10px;
@@ -75,6 +69,25 @@
   #ideas-list > li {
     width: 24%;
   }
+}
+
+
+/** Votes */
+.vote-link {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: url(../images/hollow-star.png) no-repeat 8px 9px;
+  width: 64px;
+  color: black;
+  text-decoration: none;
+  text-align: center;
+  font: 22px/72px Open Sans;
+}
+
+.vote-link.voted {
+  background: url('../images/yellow-star.png');
+  line-height: 64px;
 }
 
 
