Improved support for IE8.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@43 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/assets/styles/idea-form.css
+++ b/public/assets/styles/idea-form.css
@@ -23,11 +23,11 @@ input[type="submit"] {
   font-size: 1.4em;
 }
 
-input[type="submit"]:disabled {
+input[type="submit"][disabled] {
   background-color: #999;
 }
 
-input[type="submit"]:not(:disabled) {
+input[type="submit"]:not([disabled]) {
   cursor: pointer;
 }
 
