Show how many votes the user has left.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@44 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/assets/styles/filters.css
+++ b/public/assets/styles/filters.css
@@ -2,6 +2,7 @@
 #filter-section {
   position: absolute;
   right: 20px;
+  bottom: 20px;
 }
 
 #filter-section ul {
@@ -29,7 +30,8 @@
 }
 
 #filter-section ul > li.active a {
-  background-color: greenyellow;
+  background-color: orange;
+  color: white;
 }
 
 #searchField {
