Underline filters while hovering.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@45 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/assets/styles/filters.css
+++ b/public/assets/styles/filters.css
@@ -29,6 +29,10 @@
   border-radius: 5px;
 }
 
+#filter-section ul > li:not(.active) a:hover {
+  text-decoration: underline;
+}
+
 #filter-section ul > li.active a {
   background-color: orange;
   color: white;
