--- a/public/assets/styles/base.css
+++ b/public/assets/styles/base.css
@@ -11,6 +11,7 @@ body {
   font: 10pt Segoe UI, sans-serif;
   background: url('../images/background.jpg');
   margin: 40px;
+  overflow-y: scroll;
 }
 
 input,
