Styles for quotes and ordered lists.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@47 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/assets/styles/idea-form.css
+++ b/public/assets/styles/idea-form.css
@@ -16,7 +16,7 @@ textarea {
 }
 
 input[type="submit"] {
-  background-color: orange;
+  background-color: #f70;
   padding: 5px 10px;
   border: 0px;
   color: white;
