--- a/public/assets/styles/layout.css
+++ b/public/assets/styles/layout.css
@@ -22,7 +22,7 @@
 }
 
 #freeVotesLeft {
-  background-color: orange;
+  background-color: #f70;
   color: white;
   padding: 0 8px;
   font-size: 20px;
