--- a/public/assets/styles/base.css
+++ b/public/assets/styles/base.css
@@ -19,3 +19,55 @@ textarea {
   font-family: inherit;
   font-size: inherit;
 }
+
+p {
+  margin-bottom: 10px;
+}
+
+/** Lists */
+ol.numeric-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+ol.numeric-list > li {
+  margin-bottom: 5px;
+  padding-left: 25px;
+  min-height: 18px;
+  position: relative;
+  counter-increment: listItem;
+}
+
+ol.numeric-list > li:before {
+  content: counter(listItem);
+  color: white;
+  background-color: #f60;
+  width: 18px;
+  height: 18px;
+  overflow: hidden;
+  text-align: center;
+  position: absolute;
+  top: 1px;
+  left: 0;
+  border-radius: 9px;
+  line-height: 16px;
+}
+
+/** Blockquotes */
+blockquote {
+  background: #f9f9f9;
+  border-left: 10px solid #ccc;
+  margin-bottom: 10px;
+  padding: 0.5em 10px;
+  quotes: "\201C""\201D""\2018""\2019";
+}
+
+blockquote:before {
+  color: #ccc;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+}
