--- a/public/assets/styles/comments.css
+++ b/public/assets/styles/comments.css
@@ -1,10 +1,38 @@
 
+#comment-list > li {
+  margin: 0 0 20px;
+  padding: 15px 0 0 65px;
+}
+
+#comment-list > li:first-child {
+  margin-bottom: 0;
+}
+
 #comment-list textarea {
   height: 100px;
+  resize: none;
+}
+
+#comment-list .entry-author {
+  top: 0;
+  left: 0;
+}
+
+#comment-list .entry-author img {
+  vertical-align: top;
 }
 
 #comment-list .entry-content p {
   white-space: pre-line;
+}
+
+#commentFormContainer {
+  border-top: 1px solid #ddd;
+}
+
+#commentFormContainer .entry-author {
+  opacity: 0.5;
+  top: 20px;
 }
 
 @media (max-width: 800px) {
