Added tutorial for showing how the environment works.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@52 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/assets/styles/ideas-list.css
+++ b/public/assets/styles/ideas-list.css
@@ -99,8 +99,8 @@
 
 
 /** Shadow effects */
-.box-shadow #ideas-list > li:before,
-.box-shadow #ideas-list > li:after
+.box-shadow #ideas-list > li:not(.introjs-showElement):before,
+.box-shadow #ideas-list > li:not(.introjs-showElement):after
 {
   z-index: -1;
   position: absolute;
