New idea form is now bigger.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@57 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/assets/styles/idea-form.css
+++ b/public/assets/styles/idea-form.css
@@ -1,6 +1,6 @@
 
 #new-idea {
-  width: 480px;
+  width: 540px;
 }
 
 input[type="text"],
@@ -9,6 +9,15 @@ textarea {
   width: 100%;
   display: block;
   margin-bottom: 5px;
+}
+
+#new-idea select,
+#new-idea textarea {
+  margin-top: 10px;
+}
+
+#new-idea select {
+  padding: 5px;
 }
 
 textarea {
