Placeholders now show up in IE8.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@58 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/assets/styles/base.css
+++ b/public/assets/styles/base.css
@@ -24,6 +24,11 @@ p {
   margin-bottom: 10px;
 }
 
+input.placeholder,
+textarea.placeholder {
+  color: #999;
+}
+
 /** Lists */
 ol.numeric-list {
   list-style: none;
