--- a/public/assets/styles/ideas-list.css
+++ b/public/assets/styles/ideas-list.css
@@ -4,12 +4,12 @@
   float: left;
   position: relative;
   background-color: white;
+  cursor: pointer;
 }
 
 #ideas-list > li:first-child {
   text-align: center;
   padding: 48px 10px;
-  cursor: pointer;
   background-color: white;
   transition: 0.2s background, 0.2s border;
   border: 1px solid transparent;
@@ -36,8 +36,11 @@
   padding-right: 40px;
 }
 
+#ideas-list > li:hover h3 {
+  text-decoration: underline;
+}
+
 #ideas-list .entry-content {
-  cursor: pointer;
   border-radius: 10px;
   height: 120px;
   overflow: hidden;
