Line-height is not needed when voting is disabled.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@60 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/assets/styles/layout.css
+++ b/public/assets/styles/layout.css
@@ -37,7 +37,7 @@ a[href="//ee.swedbank.net/"]:not(:hover) {
 
 #headerProfile p {
   display: inline-block;
-  line-height: 28px;
+  /*line-height: 28px;*/
   width: 30%;
 }
 
