Finished ideas are now orange, instead of green.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@63 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/assets/styles/ideas-list.css
+++ b/public/assets/styles/ideas-list.css
@@ -131,8 +131,8 @@
 
 /** Finished ideas */
 .finished {
-  background-color: #A1E741;
-  background-image: linear-gradient(#A1E741, #7FC521);
+  background-color: #f90 !important;
+  background-image: linear-gradient(orange, #f60);
 }
 
 .finished .entry-content h3 {
