--- a/public/assets/styles/ideas-list.css
+++ b/public/assets/styles/ideas-list.css
@@ -4,7 +4,6 @@
   float: left;
   position: relative;
   background-color: white;
-  cursor: pointer;
 }
 
 #ideas-list > li:first-child {
@@ -36,7 +35,7 @@
   padding-right: 40px;
 }
 
-#ideas-list > li:hover h3 {
+#ideas-list .entry-content:hover h3 {
   text-decoration: underline;
 }
 
@@ -45,6 +44,7 @@
   height: 120px;
   overflow: hidden;
   position: relative;
+  cursor: pointer;
 }
 
 .entry-data {
@@ -57,6 +57,15 @@
 .entry-data li {
   background: no-repeat left;
   padding-left: 30px;
+}
+
+.entry-data a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.entry-data a:hover {
+  text-decoration: underline;
 }
 
 .entry-data li.comments {
