Specified minimum width for modals to avoid succinct ideas causing awfully narrow layouts.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@71 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/assets/plugins/modals/modals.css
+++ b/public/assets/plugins/modals/modals.css
@@ -3,6 +3,7 @@
   display: none;
   position: fixed;
   background: white;
+  min-width: 480px;
   max-width: 600px;
   z-index: 2;
   transition-property: top, left;
