--- a/public/assets/styles/ideas-list.css
+++ b/public/assets/styles/ideas-list.css
@@ -70,6 +70,10 @@
   text-decoration: none;
 }
 
+.finished .entry-data a {
+  color: black;
+}
+
 .entry-data a:hover {
   text-decoration: underline;
 }
