--- a/app/views/labels.xml
+++ b/app/views/labels.xml
@@ -11,6 +11,10 @@
     <EST>kommentaar</EST>
     <ENG>comment</ENG>
   </label>
+  <label id="addComment">
+    <EST>Lisa kommentaar</EST>
+    <ENG>Add comment</ENG>
+  </label>
   <label id="comments">
     <EST>kommentaari</EST>
     <ENG>comments</ENG>
@@ -20,8 +24,8 @@
     <ENG>Open comments</ENG>
   </label>
   <label id="delete">
-    <EST>Kustuta</EST>
-    <ENG>Delete</ENG>
+    <EST>Kustuta idee</EST>
+    <ENG>Delete idea</ENG>
   </label>
   <label id="vote">
     <EST>Anna hääl</EST>
@@ -78,5 +82,17 @@
   <label id="searchPlaceholder">
     <EST>Otsi...</EST>
     <ENG>Search...</ENG>
+  </label>
+  <label id="removeVote">
+    <EST>Eemalda hääl</EST>
+    <ENG>Remove vote</ENG>
+  </label>
+  <label id="addEvent">
+    <EST>Lisa üritus</EST>
+    <ENG>Add event</ENG>
+  </label>
+  <label id="nextEventAt">
+    <EST>Järgmine üritus</EST>
+    <ENG>Next event at</ENG>
   </label>
 </labels>
