--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -8,8 +8,8 @@
 }
 
 body {
-  font: 10pt Segoe UI, sans-serif;
-  background: url('../images/background.jpg');
+  font: 16px Segoe UI, sans-serif;
+  background-color: #f5f5f5;
   margin: 40px;
   overflow-y: scroll;
   min-width: 600px;
@@ -26,7 +26,7 @@ p {
 }
 
 a {
-  color: #d33e00;
+  color: #EF6408;
 }
 
 input.placeholder,
