--- a/public/styles/activities.css
+++ b/public/styles/activities.css
@@ -4,7 +4,16 @@
   font-size: 14px;
 }
 
+.activity-list > li + li {
+  margin-top: 10px;
+}
+
 .activity-list .entry-content {
   margin-left: 44px;
   margin-top: -10px;
+}
+
+.activity-list .action {
+  color: #777;
+  font-size: 12px;
 }
