Improve the layout of ideas list by using display: flex;
git-svn-id: https://svn.crebit.ee/internal/brainstorm@134 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/styles/entry-list.css
+++ b/public/styles/entry-list.css
@@ -1,11 +1,14 @@
 
 .entry-list {
   list-style: none;
+  display: flex;
+  flex-flow: wrap;
 }
 
 .entry-list > li {
   position: relative;
-  margin: 0.5% 1.5% 2%;
+  margin: 0.5% 1.5% 20px;
+  height: 100%;
 }
 
 .entry-list h3 + p {
