Retain line breaks in idea description.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@139 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/styles/ideas-list.css
+++ b/public/styles/ideas-list.css
@@ -215,6 +215,10 @@ a.vote-action:hover {
   line-height: 36px;
 }
 
+.idea-description {
+  white-space: pre-line;
+}
+
 .idea-activity-section form + .activity-list {
   margin-top: 20px;
 }
