Added settings panel, where user can specify if he/she would like to receive daily newsletter.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@143 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -27,6 +27,22 @@ a[href="//ee.swedbank.net/"]:not(:hover) {
   overflow: hidden;
 }
 
+#header .call-to-action {
+  color: #777;
+  font-size: 20px;
+}
+
+.layer-inner {
+  background-position: center;
+  background-size: cover;
+  background-color: orange;
+
+}
+
+#userName .profile-image {
+  margin-top: -10px;
+}
+
 #headerProfile {
   display: none;
   float: left;
